# daton

./: .gitignore  analyzedData.csv  analyzedData.xlsx  correlationData.xlsx  main.py  mainStay.py  pyproject.toml  testData.csv  testData.xlsx
