[tool.poetry]
name = "repl_python3_MenacingProfuseAgent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
replit = "^3.2.4"
PyDrive = "^1.3.1"
google-auth-oauthlib = "^0.4.6"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
